syntax = "proto3";

package user;
option go_package = "grpc-template/protobuf/user";

message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    string postal_code = 5;
}

message User {
    string first_name = 1 ;
    string last_name = 2;
    string password = 3;
    string email = 4;
    Address address = 5;
}

message CreateUserRequest {
    User user = 1;
}
